--- a/index.html
+++ b/index.html
@@ -10458,7 +10458,7 @@ form .row:first-child .floating-label-form-group {
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Uday Gupta</a>
+                            <a href="#">Uday Gupta</a>
                             .
                         </p>
                     </div>
